Removed uneeded LeftTuple impl (#5001)